Upgrade HtmlUnit from 2.x to 3.x