@@ -1,7 +1,9 @@
 package io.jenkins.plugins.localization_zh_cn;
 
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import hudson.Extension;
 import hudson.model.RootAction;
+import java.nio.charset.StandardCharsets;
 import jenkins.model.Jenkins;
 import org.apache.commons.io.IOUtils;
 import org.kohsuke.stapler.StaplerResponse;
@@ -20,6 +22,7 @@ public class UpdateCenterAction implements RootAction {
     private final String CRT = "mirror-adapter.crt";
 
     @RequirePOST
+    @SuppressFBWarnings(value = {"NP_LOAD_OF_KNOWN_NULL_VALUE", "RCN_REDUNDANT_NULLCHECK_OF_NULL_VALUE"}, justification = "Spotbugs doesn't grok try-with-resources")
     public void doUse(StaplerResponse response) throws IOException {
         if (!Jenkins.get().hasPermission(Jenkins.ADMINISTER)) {
             response.sendError(HttpServletResponse.SC_FORBIDDEN);
@@ -34,9 +37,9 @@ public class UpdateCenterAction implements RootAction {
 
         URL caRoot = context.getResource("/WEB-INF/update-center-rootCAs");
         String crtPath = caRoot.getFile() + CRT;
-        String decodedCrtPath = URLDecoder.decode(crtPath, "utf-8");
+        String decodedCrtPath = URLDecoder.decode(crtPath, StandardCharsets.UTF_8);
         try (InputStream input = this.getClass().getResourceAsStream("/" + CRT);
-             OutputStream output = new FileOutputStream(new File(decodedCrtPath))) {
+             OutputStream output = new FileOutputStream(decodedCrtPath)) {
             if (input == null) {
                 LOGGER.warning("no mirror certificate found");
                 return;
